--- a/aanmelden.html
+++ b/aanmelden.html
@@ -26,6 +26,21 @@
 
         <main>
             <h1> Personal </h1>
+
+            <div class="contact-form">
+
+                <form action="" method="post" enctype="text/plain">
+                    Name:<br>
+                    <input class="form-input" type="text" name="name"><br>
+                    E-mail:<br>
+                    <input class="form-input" type="text" name="mail"><br>
+                    Question:<br>
+                    <textarea class="form-textarea" name="comments">Enter text...</textarea><br><br>
+                    <input type="submit" value="Send">
+                    <input type="reset" value="Reset">
+                </form>
+            </div>
+
         </main>
         
 
