--- a/detail.html
+++ b/detail.html
@@ -29,6 +29,7 @@
         <main>
 
             <h1> Categories </h1>
+
                 <ul>
                         <li><a href="categories/absurt.html"><img src="photos/absurd.jpg" alt="absurt image">Absurt</a> </li>
                         <li><a href="categories/chasing.html"><img src="photos/chasing.jpg" alt="chasing image"> Chasing</a></li>
@@ -44,7 +45,7 @@
             
 
                 <ul>
-                    <li><a href="categories/lovedones.html"><img src="photos/loved.ones.jpg" alt="Happy family image">Loved ones</a></li>
+                    <li><a href="categories/lovedones.html"><img src="photos/loved.ones.jpg" alt="Happy family image">Loved Ones</a></li>
                     <li><a href="categories/naked.html"><img src="photos/naked.jpg" alt="image of naked barbies">Naked</a></li>
                     <li><a href="categories/teeth.html"><img src="photos/teeth.jpg" alt="teeth">Teeth</a></li>
                 </ul>
