--- a/aanmelden.html
+++ b/aanmelden.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+<!--de bronnen voor alle gebruikte afbeeldingen binnen deze site zijn te vinden in het mapje op https://www.pinterest.ph/lallabah99/ist-dreams/ -->
     <head>
         
         <title>Personal</title>
@@ -25,27 +27,30 @@
         </header>
 
         <main>
-            <h1> Personal </h1>
+            <h1>Personal</h1>
+
+            <p>Do you have a dream that you really feel like you can't explain? Sign up for 'Dreams by Lalla' by sending me an E-mail. I will try to figure out why you dream that certain way.</p>
 
             <div class="contact-form">
 
-                <form action="" method="post" enctype="text/plain">
+                <form action="mailto:lallabah99@gmail.com" method="post" enctype="text/plain">
                     Name:<br>
-                    <input class="form-input" type="text" name="name"><br>
+                    <input class="form-input" type="text" name="name"><br><br>
                     E-mail:<br>
-                    <input class="form-input" type="text" name="mail"><br>
+                    <input class="form-input" type="text" name="mail"><br><br>
                     Question:<br>
-                    <textarea class="form-textarea" name="comments">Enter text...</textarea><br><br>
-                    <input type="submit" value="Send">
-                    <input type="reset" value="Reset">
+                    <textarea class="form-input" name="comments">Tell me about your dream...</textarea><br>
+                    <input class="button" type="submit" value="Send">
+                    <img id="backgroundmail" src="photos/mail.png" alt="mail">
                 </form>
             </div>
 
         </main>
-        
+
+        <footer>
+                <p>2019 &copy; Dreams by Lalla Bah</p>
+        </footer>
 
     </body>
-
- 
 
 </html>
