--- a/detail.html
+++ b/detail.html
@@ -47,7 +47,7 @@
                     <li><a href="categories/naked.html"><img src="photos/naked.jpg" alt="image of naked barbies">Naked</a></li>
                     <li><a href="categories/teeth.html"><img src="photos/teeth.jpg" alt="teeth">Teeth</a></li>
                 </ul>
-        </main>>
+        </main>
 
         <footer>
                 <p>2019 &copy; Dreams by Lalla Bah</p>
